--- a/backend/package.json
+++ b/backend/package.json
@@ -9,13 +9,17 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "express": "^4.21.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "papaparse": "^5.5.2",
     "prisma": "^5.22.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
+    "@types/json2csv": "^5.0.7",
     "@types/node": "^22.9.0",
+    "@types/papaparse": "^5.3.15",
     "nodemon": "^3.1.7"
   }
 }
